--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -3,7 +3,7 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">Contact Us</h2>
-                    <h3 class="section-subheading">contact@clydetechnology.com</h3>
+                    <h3 class="section-heading">contact@clydetechnology.com</h3>
                 </div>
             </div>
             <!-- <div class="row">
