--- a/_includes/css/agency.css
+++ b/_includes/css/agency.css
@@ -126,7 +126,7 @@ fieldset[disabled] .btn-primary.active {
     font-family: {{ site.data.template.font.primary }};
     font-size: 18px;
     font-weight: 700;
-    color: #fff;
+    color: #222;
     background-color: #{{ site.data.template.color.primary }};
 }
 
@@ -230,7 +230,7 @@ fieldset[disabled] .btn-xl.active {
 
 .navbar-default .navbar-nav>.active>a:hover,
 .navbar-default .navbar-nav>.active>a:focus {
-    color: #fff;
+    color: #222;
     background-color: #{{ site.data.template.color.secondary }};
 }
 
