--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -6,7 +6,7 @@
 
     <body id="page-top" class="index">
 
-    {% content %}
+    {{ content }}
     {% include contact.html %}
     {% include footer.html %}
     {% include modals.html %}
