--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -5,8 +5,23 @@
 
 
     <body id="page-top" class="index">
-
-    {{ content }}
+    {% include header.html %}
+	
+	<section id="page">
+	<div class="container">
+		<div class="row">
+			<div class="col-lg-12 text-center">
+				<h2 class="section-heading"></h2>
+			</div>
+		</div>
+		<div class="row">
+			<div class="col-lg-12">
+				{{ content }}
+			</div>
+		</div>
+	</div>
+	</section>
+	
     {% include contact.html %}
     {% include footer.html %}
     {% include modals.html %}
