--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -5,7 +5,7 @@
 
 
     <body id="page-top" class="index">
-    {% include header.html %}
+    {% include collapsedNavbar.html %}
 	
 	<section id="page">
 	<div class="container">
