--- a/_includes/collapsedNavbar.html
+++ b/_includes/collapsedNavbar.html
@@ -1,5 +1,5 @@
 <!-- Navigation -->
-    <nav class="navbar navbar-default navbar-fixed-top">
+	<nav class="navbar navbar-default navbar-fixed-top navbar-shrink">
         <div class="container">
             <!-- Brand and toggle get grouped for better mobile display -->
             <div class="navbar-header page-scroll">
@@ -15,11 +15,11 @@
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
-                    <li class="hidden">
+                    <li class="hidden active">
                         <a href="#page-top"></a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#services">Services</a>
+                        <a class="page-scroll" href="/#services">Services</a>
                     </li>
                   <!--  <li>
                         <a class="page-scroll" href="#portfolio">Portfolio</a>
@@ -30,8 +30,8 @@
                     <li>
                         <a class="page-scroll" href="#team">Team</a>
                     </li> -->
-                    <li>
-                        <a class="page-scroll" href="#contact">Contact</a>
+                    <li class="">
+                        <a class="page-scroll" href="/#contact">Contact</a>
                     </li>
                 </ul>
             </div>
