--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,7 +10,7 @@
     {% include services.html %}
     {% include contact.html %}
     {% include footer.html %}
-    {% include modals.html %}
+    {% include serviceModals.html %}
     {% include js.html %}
 
     </body>
