--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -24,7 +24,7 @@
 	
     {% include contact.html %}
     {% include footer.html %}
-    {% include modals.html %}
+    {% include serviceModals.html %}
     {% include js.html %}
 
     </body>
