--- a/_includes/services.html
+++ b/_includes/services.html
@@ -4,7 +4,7 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">Services</h2>
-                    <h3 class="section-subheading text-muted">Keep your businesses running smoothly by regularly testing your systems, securing all vulnerabilities, and training your staff to keep your systems safe.</h3>
+                    <h3 class="section-subheading text-muted">Empower your business with robust cybersecurity solutions through comprehensive security audits, incident response, managed security services, and expert training to safeguard your systems and data.</h3>
                 </div>
             </div>
             <div class="row text-center">
