Feat: Contact form

--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -6,6 +6,21 @@
                     <h5 class="section-heading">contact@clydetechnology.com</h5>
                 </div>
             </div>
+			<div class="row">
+                <div class="col-lg-12">
+					<form
+					  action="https://formspree.io/f/mvonldev"
+					  method="POST"
+					>
+					  <label>Your name: <input required name="name"></label>
+					  <label>Your number: <input required type="tel" name="number"></label>
+					  <label>Your email: <input required type="email" name="email"></label>
+					  <label>Your message: <textarea required name="message"></textarea></label>
+					  <!-- your other form fields go here -->
+					  <button type="submit">Send</button>
+					</form>
+				</div>
+			</div>
             <!-- <div class="row">
                 <div class="col-lg-12">
                     <form name="sentMessage" id="contactForm" novalidate>
