--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -9,15 +9,20 @@
 			<div class="row">
                 <div class="col-lg-12">
 					<form
+					  id="contactForm"
 					  action="https://formspree.io/f/mvonldev"
 					  method="POST"
 					>
+					<div class="row">
+                            <div class="col-md-6">
 					  <label>Your name: <input required name="name"></label>
-					  <label>Your number: <input required type="tel" name="number"></label>
-					  <label>Your email: <input required type="email" name="email"></label>
-					  <label>Your message: <textarea required name="message"></textarea></label>
+					  </div>
+					  <div class="col-md-6"><label>Your number: <input required type="tel" name="number"></label></div>
+					  <div class="col-md-6"><label>Your email: <input required type="email" name="email"></label></div>
+					  <div class="col-md-6"><label>Your message: <textarea required name="message"></textarea></label></div>
 					  <!-- your other form fields go here -->
-					  <button type="submit">Send</button>
+					  <div class="col-lg-12 text-center"><button type="submit">Send</button></div>
+					  </div>
 					</form>
 				</div>
 			</div>
