--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -15,13 +15,14 @@
 					>
 					<div class="row">
                             <div class="col-md-6">
-					  <label>Your name: <input required name="name"></label>
+					  <label>Your name: <input class="form-control" required name="name"></label>
 					  </div>
-					  <div class="col-md-6"><label>Your number: <input required type="tel" name="number"></label></div>
-					  <div class="col-md-6"><label>Your email: <input required type="email" name="email"></label></div>
-					  <div class="col-md-6"><label>Your message: <textarea required name="message"></textarea></label></div>
+					  <div class="col-md-6"><input class="form-control" placeholder="Your Name *" required type="tel" name="number"></div>
+					  <div class="col-md-6"><input class="form-control" placeholder="Your Email *" required type="email" name="email"></div>
+					  <div class="col-md-6"><input class="form-control" placeholder="Your Phone *" required type="tel" name="phone"></div>
+					  <div class="col-md-6"><textarea class="form-control" placeholder="Your Message *" required name="message"></textarea></div>
 					  <!-- your other form fields go here -->
-					  <div class="col-lg-12 text-center"><button type="submit">Send</button></div>
+					  <div class="col-lg-12 text-center"><button class="btn btn-xl" type="submit">Send</button></div>
 					  </div>
 					</form>
 				</div>
