--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -14,10 +14,12 @@
 					  method="POST"
 					>
 					<div class="row">
-					  <div class="form-group"><div class="col-md-6"><input class="form-control" placeholder="Your Name *" required type="tel" name="number"></div></div>
-					  <div class="form-group"><div class="col-md-6"><input class="form-control" placeholder="Your Email *" required type="email" name="email"></div></div>
-					  <div class="form-group"><div class="col-md-6"><input class="form-control" placeholder="Your Phone *" required type="tel" name="phone"></div></div>
-					  <div class="form-group"><div class="col-md-6"><textarea class="form-control" placeholder="Your Message *" required name="message"></textarea></div></div>
+					<div class="col-md-6">
+					  <div class="form-group"><input class="form-control" placeholder="Your Name *" required type="tel" name="number"></div>
+					  <div class="form-group"><input class="form-control" placeholder="Your Email *" required type="email" name="email"></div>
+					  <div class="form-group"><input class="form-control" placeholder="Your Phone *" required type="tel" name="phone"></div>
+					</div>
+					  <div class="col-md-6"><div class="form-group"><textarea class="form-control" placeholder="Your Message *" required name="message"></textarea></div></div>
 					  <!-- your other form fields go here -->
 					  <div class="col-lg-12 text-center"><button class="btn btn-xl" type="submit">Send</button></div>
 					  </div>
